--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -39,26 +39,8 @@ body {
   z-index: 100;
 }
 
-.btn-submit {
-  /* border: none; */
-}
-
 .input-form {
 margin-right: 10px;
-}
-
-.btn-load-more {
-  margin-top: 50px;
-  margin-bottom: 80px;
-  width: 100%;
-  display: inline-flex;
-  justify-content: center;
-
-}
-
-.load-more {
-  background-color: blue;
-  color: #fafafa;
 }
 
 .info {
@@ -123,3 +105,10 @@ margin-right: 10px;
 .item {
   font-size: 14px;
 }
+
+/* #scroll-area {
+  width: 100%;
+  height: 100px;
+  background-color: coral;
+
+} */
